Fixed some spacing

--- a/src/styles/_Nav.scss
+++ b/src/styles/_Nav.scss
@@ -3,7 +3,7 @@ nav {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  padding: 2rem 1rem 1rem;
+  padding: 1rem;
   button {
     background-color: transparent;
     padding: 1rem;
